<resources>
    <string name="app_name">Students</string>
    <string name="password">Գաղտնաբառ</string>
    <string name="iHaveAcc">Արդեն իսկ ունեմ հաշիվ։ </string>
    <string name="toLoginPage"> Մուտք գործել</string>
    <string name="ok">Հաստատել</string>
    <string name="name">Անուն</string>
    <string name="creatNewAcc">Ստեղծել նոր հաշիվ</string>
    <string name="e_mailText">E-mail</string>
    <string name="noHaveAcc">Չունեմ հաշիվ։</string>
    <string name="creatNewAccLogin">Ստեղծել նոր հաշիվ։</string>
    <string name="goSignUpPage">Մուտք գործել հաշիվ</string>
    <string name="show_hide">Show/Hide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuHome">Home</string>
    <string name="menuBooks">Books</string>
    <string name="menuQuizz">Quizz</string>
    <string name="questionstype">QuestionsType</string>
    <string name="profile">Պրոֆիլ</string>
    <string name="full_name">Անուն</string>
    <string name="examplemail_mail_ru">examplemail@mail.ru</string>
    <string name="all_score">Իմ միավորներ</string>
    <string name="post_count">Իմ նյութերը</string>
    <string name="todo">TODO</string>
    <string name="zero">0</string>
    <string name="change_name">Փոխել անունը</string>
    <string name="save_cahnge">Հիշել</string>
    <string name="cancle_change">Փակել</string>
    <string name="okey">Լավ</string>
    <string name="game_finished">game finished</string>
    <string name="top_user_name">Մուտքանուն</string>
    <string name="decription">Decription</string>
    <string name="title">Title</string>
    <string name="openLinkText">իմանալ ավելին․․․</string>
    <string name="account_string">Պրոֆիլ</string>
    <string name="quiz_string">Թեստեր</string>
    <string name="material_string">Նյութեր</string>
    <string name="top10_string">Թոփ 10</string>
    <string name="log_out">Դուրս Գալ</string>
    <string name="about_program">Ծրագրի մասին</string>
    <string name="about_program_text">Ծրագիրը նախատեսված է դպրոցականների և ուսանողների համար, իր մեջ պարունակելով թեստեր` տարբեր թեմաներից և գիտությանն վերաբերող նորություններց։</string>
    <string name="ok_lav">Լավ</string>
    <string name="close">X</string>
    <string name="e_mail_am">Էլ․ փոստ</string>
    <string name="quiz_answer_text">Թեստային Հարց</string>
    <string name="pluse">+</string>
    <string name="add">add</string>
    <string name="title_text">Վերնագիր</string>
    <string name="desc_text">Նկարագրություն</string>
    <string name="cancle_material">Չեղարկել</string>
    <string name="verifi_material">Հաստատել</string>
    <string name="material_url">Նյութի աղբյուր</string>
    <string name="nname">...</string>
    <string name="title_notifi">Title</string>
    <string name="message">message</string>

</resources>