<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6CBF4"
    tools:context=".accountFragments.AccountPageFragment">

    <View
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@drawable/accbg"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_rect01"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <ImageButton
        android:id="@+id/profileEditBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit_white"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/personImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#4F88C5"
            android:src="@drawable/ic_person_gray" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/emailProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examplemail_mail_ru"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="allScore, postCount"
        app:layout_constraintTop_toBottomOf="@+id/emailProfil" />

    <TextView
        android:id="@+id/allScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1F478F"
        android:text="@string/all_score"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/postCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1F478F"
        android:text="@string/post_count"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/scoreProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/allScore"
        app:layout_constraintStart_toStartOf="@+id/allScore"
        app:layout_constraintTop_toBottomOf="@+id/allScore" />

    <TextView
        android:id="@+id/materialSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/postCount"
        app:layout_constraintStart_toStartOf="@+id/postCount"
        app:layout_constraintTop_toBottomOf="@+id/postCount" />

    <ProgressBar
        android:id="@+id/updateProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_program"
        android:textStyle="bold"
        android:textColor="#9064DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/logOut"
        app:layout_constraintTop_toBottomOf="@+id/scoreProfile"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:textColor="#9064DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/about"
        app:layout_constraintTop_toBottomOf="@+id/scoreProfile"
        app:layout_constraintVertical_bias="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>