<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_marginHorizontal="8dp"    android:background="@drawable/media_item_bg"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:layout_marginTop="10dp"    >    <androidx.constraintlayout.helper.widget.Flow        android:id="@+id/flow2"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:orientation="vertical"        android:padding="16dp"        app:constraint_referenced_ids="materialImage,materialTitile,materialDesc,openLink"        app:flow_verticalGap="2dp" />    <ImageView        android:id="@+id/materialImage"        android:layout_width="match_parent"        android:layout_height="180dp"        android:scaleType="centerCrop"        android:src="@drawable/defoultimage"        />    <TextView        android:id="@+id/materialTitile"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:paddingHorizontal="8dp"        android:text="@string/title"        android:textColor="#2C1459"        app:layout_constraintStart_toStartOf="parent"        tools:layout_editor_absoluteY="198dp" />    <TextView        android:id="@+id/materialDesc"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:paddingHorizontal="10dp"        android:text="@string/decription"        android:textStyle="italic"        android:textColor="#a8a8a8"        android:textSize="12sp"        app:layout_constraintStart_toStartOf="parent"        tools:layout_editor_absoluteY="219dp" />    <TextView        android:id="@+id/openLink"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/openLinkText"        android:textColor="@color/purple_700"        android:textStyle="italic"        android:layout_margin="8dp"        android:textSize="12sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.92"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/materialDesc" /></androidx.constraintlayout.widget.ConstraintLayout>