<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:paddingVertical="16dp"    xmlns:app="http://schemas.android.com/apk/res-auto">    <androidx.cardview.widget.CardView        android:id="@+id/cardView3"        android:layout_width="80dp"        android:layout_height="80dp"        app:cardCornerRadius="100dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" >    <com.google.android.material.imageview.ShapeableImageView        android:id="@+id/changeImage"        android:layout_width="80dp"        android:layout_height="80dp"        android:background="#8e24aa"        android:src="@drawable/ic_person_gray"        />    </androidx.cardview.widget.CardView>    <EditText        android:id="@+id/changeName"        android:layout_width="fill_parent"        android:layout_height="48dp"        android:layout_marginHorizontal="24dp"        android:layout_marginTop="8dp"        android:background="@drawable/ed_text_design"        android:drawableStart="@drawable/costum_person_icon"        android:hint="@string/change_name"        android:maxLength="30"        android:paddingStart="8dp"        android:paddingEnd="16dp"        android:singleLine="true"        android:textAlignment="center"        android:textColor="#262626"        android:textColorHint="#AFADAD"        app:layout_constraintEnd_toEndOf="@+id/cardView3"        app:layout_constraintStart_toStartOf="@+id/cardView3"        app:layout_constraintTop_toBottomOf="@+id/cardView3" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/saveChange"        android:layout_width="0dp"        android:layout_marginTop="16dp"        android:layout_height="40dp"        android:layout_marginStart="16dp"        android:layout_marginEnd="4dp"        android:text="@string/save_cahnge"        android:textColor="@color/white"        android:textAllCaps="false"        android:background="@drawable/btn2_style"        app:layout_constraintEnd_toStartOf="@+id/cancelChange"        app:layout_constraintStart_toStartOf="@+id/changeName"        app:layout_constraintTop_toBottomOf="@+id/changeName" />    <androidx.appcompat.widget.AppCompatButton        android:id="@+id/cancelChange"        android:layout_width="0dp"        android:layout_height="40dp"        android:layout_marginStart="4dp"        android:layout_marginEnd="16dp"        android:text="@string/cancle_change"        android:textColor="@color/white"        android:layout_marginTop="16dp"        android:textAllCaps="false"        android:background="@drawable/btn2_style"        app:layout_constraintEnd_toEndOf="@+id/changeName"        app:layout_constraintStart_toEndOf="@+id/saveChange"        app:layout_constraintTop_toBottomOf="@+id/changeName" /></androidx.constraintlayout.widget.ConstraintLayout>